--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 3px 4px rgb(70, 70, 70);
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
   z-index: 2;
 }
 
@@ -122,6 +122,7 @@ body {
 }
 
 #add-project {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -134,7 +135,7 @@ body {
   font-size: 25px;
   border: none;
   border-bottom: 2px solid white;
-  margin: 0px 40px 20px 40px;
+  margin: 0px 40px;
   outline: none;
   color: white;
   display: none;
@@ -167,29 +168,239 @@ body {
 
 /* ---- Main ---- */
 .main {
-  padding: 50px;
-  background-color: azure;
+  padding: 30px 50px;
+  z-index: 1;
+  background-color: rgb(226, 237, 245);
+  box-shadow: -3px 0 4px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
 }
 
-.note-container {
+.card-container {
+  margin-top: 10px;
   display: grid;
   grid-template: repeat(auto-fit, minmax(100px, 1fr)) / repeat(
       auto-fit,
       minmax(300px, 1fr)
     );
-  grid-auto-rows: minmax(100px, max-content);
   gap: 50px;
 }
 
-#add-note,
-#add-project {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
+#add-card-btn {
+  align-self: center;
+  font-size: 30px;
+  padding-bottom: 2px;
+  margin: 50px 50px 30px 50px;
+  width: clamp(100px, 30%, 300px);
+  text-align: center;
+  border: 2px solid black;
+  border-radius: 50px;
+  transition:
+    scale 0.2s,
+    background-color 0.2s;
 }
 
-.note {
-  background-color: white;
-  box-shadow: 2px 2px 4px rgb(84, 84, 84);
-  padding: 20px;
+#add-card-btn:hover {
+  scale: 1.1;
+  background-color: rgb(196, 216, 231);
+}
+
+#add-card-btn:active {
+  scale: 0.93;
+}
+
+/* ---- Card ---- */
+.todo-card {
+  background-color: #fcfeff;
+  border-radius: 10px;
+  box-shadow: 1px 2px 4px rgb(190, 203, 212);
+  display: grid;
+  grid-template: 1fr 50px / 10px 1fr;
+  transition: 0.2s;
+}
+
+.todo-card:hover {
+  transform: translateY(-5px);
+}
+
+.priority-block {
+  grid-row: 1 / 3;
+  background-color: #ef6969;
+  border-radius: 10px 0 0 10px;
+}
+
+.high-priority {
+  background-color: rgb(239, 61, 61);
+}
+
+.medium-priority {
+  background-color: rgb(239, 177, 61);
+}
+
+.low-priority {
+  background-color: rgb(153, 239, 61);
+}
+
+.info-block {
+  padding: 20px 20px 0 20px;
+}
+
+.info-block .h2 {
+  line-height: 1.1;
+  font-size: 1.4em;
+}
+
+.info-block p:first-of-type {
+  color: rgb(105, 105, 105);
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.info-block p:first-of-type::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -7.5px;
+  background-color: rgb(160, 160, 160);
+  width: 200px;
+  height: 1px;
+  border-radius: 1px;
+}
+
+.delete-block {
+  margin: 15px 15px 0 0;
+}
+
+#trash-svg {
+  width: 25px;
+  z-index: 1;
+  transition: 0.1s;
+}
+
+#trash-svg:hover {
+  scale: 1.2;
+}
+
+.complete-block {
+  grid-column: 2 / 4;
+  justify-self: right;
+  align-self: self-end;
+  padding: 10px 20px 15px;
+}
+
+.complete-toggle {
+  width: 100px;
+  border: 1.5px solid black;
+  border-radius: 20px;
+  transition: transform 0.15s;
+}
+
+.complete-toggle.completed {
+  background-color: #22c55e;
+}
+
+.complete-toggle.incomplete {
+  background-color: #ef4444;
+}
+
+.complete-toggle:hover {
+  transform: scale(1.05);
+}
+
+/* ---- Add Todo Card Dialog ---- */
+#new-todo-dialog {
+  margin: auto;
+  width: clamp(370px, 50vw, 500px);
+  height: 360px;
+  padding: 30px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 3px 3px 4px 2px rgb(102, 102, 102);
+}
+
+.input-info > input {
+  width: 100%;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+#new-todo-dialog h2 {
+  margin-bottom: 15px;
+}
+
+.input-info #note-due-date {
+  width: 50%;
+  display: block;
+}
+
+label[for='note-importance'] {
+  display: flex;
+  font-size: 1.1em;
+}
+
+#note-importance {
+  margin-left: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 8px;
+}
+
+.form-buttons {
+  margin: 30px 20px 0 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.form-buttons button {
+  border-radius: 50px;
+  background-color: #f87171;
+  border: 2px solid #7f1d1d;
+  transition: 0.1s;
+}
+
+.form-buttons button:hover {
+  scale: 1.05;
+}
+
+#confirm-button {
+  background-color: #a3e635;
+  border: 2px solid #365314;
+}
+
+/* Dialog transitions */
+/*   Open state of the dialog  */
+dialog[open] {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+/*   Closed state of the dialog   */
+dialog {
+  opacity: 0;
+  transform: scaleX(0);
+  transition: all 0.3s allow-discrete;
+}
+
+@starting-style {
+  dialog[open] {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+}
+
+/* Transition the :backdrop when the dialog modal is promoted to the top layer */
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0%);
+  transition: all 0.3s allow-discrete;
+}
+
+dialog[open]::backdrop {
+  background-color: rgb(0 0 0 / 50%);
+}
+
+@starting-style {
+  dialog[open]::backdrop {
+    background-color: rgb(0 0 0 / 0%);
+  }
 }
