Fixed margin on project input

--- a/src/styles.css
+++ b/src/styles.css
@@ -135,7 +135,7 @@ body {
   font-size: 25px;
   border: none;
   border-bottom: 2px solid white;
-  margin: 0px 40px;
+  margin: 0px 40px 20px 40px;
   outline: none;
   color: white;
   display: none;
